@@ -14,7 +14,7 @@
 #  A copy of the GNU General Public License is available at
 #  http://www.r-project.org/Licenses/
 
-RSiteSearch <- function(string, restrict = c("Rhelp02a", "functions", "docs"),
+RSiteSearch <- function(string, restrict = c("Rhelp08", "functions", "views"),
 			format = c("normal", "short"),
 			sortby = c("score", "date:late", "date:early",
 			"subject", "subject:descending",
@@ -27,7 +27,8 @@ RSiteSearch <- function(string, restrict = c("Rhelp02a", "functions", "docs"),
     mpp <- paste0("max=", matchesPerPage)
     format <- paste0("result=", match.arg(format))
 
-    restrictVALS <- c("Rhelp02a", "Rhelp01", "functions", "docs", "R-devel")
+    restrictVALS <- c("Rhelp08", "Rhelp01", "Rhelp02", "functions", "views",
+                      "R-devel", "R-sig-mixed-models")
     restr <- match.arg(restrict, choices = restrictVALS, several.ok = TRUE)
     restr <- paste(paste0("idxname=", restr), collapse = "&")
 
